0.9.3/_sources/gettingstarted/examples/gallery/auto_examples_processing/raman/plot_processing_raman.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_processing/raman/plot_processing_raman.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_raman_plot_processing_raman.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_raman_plot_processing_raman.py:


Processing RAMAN spectra
========================
Various examples of processing RAMAN spectra

.. GENERATED FROM PYTHON SOURCE LINES 14-15

Import API

.. GENERATED FROM PYTHON SOURCE LINES 15-17

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 18-21

Importing a 1D spectra
----------------------
Define the folder where are the spectra

.. GENERATED FROM PYTHON SOURCE LINES 21-24

.. code-block:: default

    datadir = scp.preferences.datadir
    ramandir = datadir / "ramandata/labspec"








.. GENERATED FROM PYTHON SOURCE LINES 25-26

Read a single spectrum

.. GENERATED FROM PYTHON SOURCE LINES 26-28

.. code-block:: default

    A = scp.read_labspec("SMC1-Initial_RT.txt", directory=ramandir)








.. GENERATED FROM PYTHON SOURCE LINES 29-30

Plot the spectrum

.. GENERATED FROM PYTHON SOURCE LINES 30-31

.. code-block:: default

    A.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_001.png
   :alt: plot processing raman
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='Raman shift $\\mathrm{/\\ \\mathrm{cm}^{-1}}$', ylabel='Counts $\\mathrm{}$'>



.. GENERATED FROM PYTHON SOURCE LINES 32-33

Crop the spectrum to a useful region

.. GENERATED FROM PYTHON SOURCE LINES 33-35

.. code-block:: default

    B = A[60.0:]
    B.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_002.png
   :alt: plot processing raman
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='Raman shift $\\mathrm{/\\ \\mathrm{cm}^{-1}}$', ylabel='Counts $\\mathrm{}$'>



.. GENERATED FROM PYTHON SOURCE LINES 36-42

Baseline correction
-------------------
Let's try to remove the baseline using different methods
For this we use the `Baseline` processor

First, we define the baseline processor

.. GENERATED FROM PYTHON SOURCE LINES 42-44

.. code-block:: default

    blc = scp.Baseline(log_level="INFO")








.. GENERATED FROM PYTHON SOURCE LINES 45-46

Now we can try the various baseline methods.

.. GENERATED FROM PYTHON SOURCE LINES 48-53

Detrending
~~~~~~~~~~
the `detrend` method is not strictly speaking a method to calculate a bottom line,
but it can be useful as a preprocessing to remove a trend.
Let's define the model to be used for detrending

.. GENERATED FROM PYTHON SOURCE LINES 53-55

.. code-block:: default

    blc.model = "detrend"








.. GENERATED FROM PYTHON SOURCE LINES 56-59

Now we need to define the order of the detrending either as an integer giving the
degree of the polynomial trend or a string among { `constant` , `linear` ,
`quadratic` , `cubic` }

.. GENERATED FROM PYTHON SOURCE LINES 59-61

.. code-block:: default

    blc.order = "linear"








.. GENERATED FROM PYTHON SOURCE LINES 62-63

Now we can fit the model to the data

.. GENERATED FROM PYTHON SOURCE LINES 63-64

.. code-block:: default

    blc.fit(B)




.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <spectrochempy.processing.baselineprocessing.baselineprocessing.Baseline object at 0x7f40d297ef50>



.. GENERATED FROM PYTHON SOURCE LINES 65-66

The baseline is now stored in the `baseline` attribute of the processor

.. GENERATED FROM PYTHON SOURCE LINES 66-70

.. code-block:: default

    corr = blc.transform()
    baseline = blc.baseline









.. GENERATED FROM PYTHON SOURCE LINES 71-75

Let's plot the result of the correction

As we will use this type of plot several times,
we define a function for it

.. GENERATED FROM PYTHON SOURCE LINES 75-86

.. code-block:: default

    def plot_result(X, Xc, bas):
        Xcm = Xc.min()
        Xcp = Xc.ptp()
        offset = Xcm + Xcp
        (Xc - Xcm).plot()
        (X + offset).plot(clear=False, color="g", linestyle="-")
        (bas + offset).plot(clear=False, color="r", linestyle="--")


    plot_result(B, corr, baseline)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_003.png
   :alt: plot processing raman
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 87-88

Let's try with a polynomial detrend of order 2

.. GENERATED FROM PYTHON SOURCE LINES 88-94

.. code-block:: default

    blc.order = 2  # quadratic detrending
    blc.fit(B)
    corr = blc.transform()
    baseline = blc.baseline
    plot_result(B, corr, baseline)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_004.png
   :alt: plot processing raman
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 95-99

Ok this is a good start.
But we can do better with more specific baseline correction methods.
Let's try the asymmetric least squares smoothing model ( `asls` ), on this detrended
spectrum:

.. GENERATED FROM PYTHON SOURCE LINES 99-101

.. code-block:: default

    Bd = blc.corrected








.. GENERATED FROM PYTHON SOURCE LINES 102-104

Asymmetric Least Squares smoothing
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 104-106

.. code-block:: default

    blc.model = "asls"








.. GENERATED FROM PYTHON SOURCE LINES 107-111

We need to define the smoothness and asymmetry parameters. The smoothness parameter is
a positive number that controls the smoothness of the baseline. The larger this number
is, the smoother the resulting baseline. The asymmetry parameter controls the
asymmetry for the AsLS resolution.

.. GENERATED FROM PYTHON SOURCE LINES 111-114

.. code-block:: default

    blc.lamb = 10**8  # smoothness
    blc.asymmetry = 0.01








.. GENERATED FROM PYTHON SOURCE LINES 115-116

Now we can fit the model to the data

.. GENERATED FROM PYTHON SOURCE LINES 116-121

.. code-block:: default

    blc.fit(Bd)
    corr = blc.transform()
    baseline = blc.baseline
    plot_result(Bd, corr, baseline)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_005.png
   :alt: plot processing raman
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_005.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/tempdirs/scp_xnzy8k_7/src/spectrochempy/processing/baselineprocessing/baselineprocessing.py:529: SparseEfficiencyWarning: spsolve requires A be CSC or CSR matrix format
      z = spsolve(C, w * y)




.. GENERATED FROM PYTHON SOURCE LINES 122-125

The correction appears to be good, but let's see if we can do better by using the
`snip` method. This method requires to adjust the width of a window (usually set to
the FWHM of the characteristic peaks).

.. GENERATED FROM PYTHON SOURCE LINES 125-133

.. code-block:: default

    blc.model = "snip"
    blc.snip_width = 55  # estimated FWHM of the peaks (expressed in point. TODO: alternatively use true coordinates)
    Bs = A[55.0:]
    blc.fit(Bs)
    corr = blc.transform()
    baseline = blc.baseline
    plot_result(Bs, corr, baseline)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_006.png
   :alt: plot processing raman
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 134-137

Baseline correction 2D spectra (series of spectra)
--------------------------------------------------
First, we read the series of spectra

.. GENERATED FROM PYTHON SOURCE LINES 137-141

.. code-block:: default


    C = scp.read_labspec("Activation.txt", directory=ramandir)
    # C = C[20:]  # discard the first 20 spectra
    C.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_007.png
   :alt: plot processing raman
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_007.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='Raman shift $\\mathrm{/\\ \\mathrm{cm}^{-1}}$', ylabel='Counts $\\mathrm{}$'>



.. GENERATED FROM PYTHON SOURCE LINES 142-148

Now we apply the AsLS method on the series of spectra

We keep the same parameters as before and fit the new dataset
The baseline is calculated for each spectrum of the series. So the process is
very slow!  For the demonstration we will the limit the series to 1 spectrum
over 10.

.. GENERATED FROM PYTHON SOURCE LINES 148-157

.. code-block:: default


    blc.model = "asls"
    blc.log_level = (
        "WARNING"  # supress output of asls (to long for the moment:  TODO optimize this)
    )
    blc.fit(C[::10])
    corr = blc.transform()
    baseline = blc.baseline
    corr.plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_008.png
   :alt: plot processing raman
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_008.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/tempdirs/scp_xnzy8k_7/src/spectrochempy/processing/baselineprocessing/baselineprocessing.py:529: SparseEfficiencyWarning: spsolve requires A be CSC or CSR matrix format
      z = spsolve(C, w * y)

    <Axes: xlabel='Raman shift $\\mathrm{/\\ \\mathrm{cm}^{-1}}$', ylabel='Counts $\\mathrm{}$'>



.. GENERATED FROM PYTHON SOURCE LINES 158-159

or the `snip` method (which is much faster)

.. GENERATED FROM PYTHON SOURCE LINES 159-164

.. code-block:: default

    blc.model = "snip"
    blc.fit(C)
    corr = blc.transform()
    baseline = blc.baseline
    corr[::10].plot()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_009.png
   :alt: plot processing raman
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_009.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='Raman shift $\\mathrm{/\\ \\mathrm{cm}^{-1}}$', ylabel='Counts $\\mathrm{}$'>



.. GENERATED FROM PYTHON SOURCE LINES 165-167

Denoising
---------

.. GENERATED FROM PYTHON SOURCE LINES 167-172

.. code-block:: default

    D = corr.copy()
    G = scp.denoise(D, ratio=98)

    G[::10].plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_010.png
   :alt: plot processing raman
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/raman/images/sphx_glr_plot_processing_raman_010.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='Raman shift $\\mathrm{/\\ \\mathrm{cm}^{-1}}$', ylabel='Counts $\\mathrm{}$'>



.. GENERATED FROM PYTHON SOURCE LINES 173-175

This ends the example ! The following line can be removed or commented
when the example is run as a notebook (`.ipynb`).

.. GENERATED FROM PYTHON SOURCE LINES 175-177

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  3.354 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_raman_plot_processing_raman.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_processing_raman.py <plot_processing_raman.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_processing_raman.ipynb <plot_processing_raman.ipynb>`
